--- a/STM32F4/Flight_Controller_960/Flight_Controller_960.ioc
+++ b/STM32F4/Flight_Controller_960/Flight_Controller_960.ioc
@@ -20,7 +20,8 @@ Dma.ADC1.1.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=USART1_TX
 Dma.Request1=ADC1
-Dma.RequestsNb=2
+Dma.Request2=USART6_TX
+Dma.RequestsNb=3
 Dma.USART1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.USART1_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART1_TX.0.Instance=DMA2_Stream7
@@ -31,6 +32,16 @@ Dma.USART1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART1_TX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART1_TX.0.Priority=DMA_PRIORITY_LOW
 Dma.USART1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART6_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART6_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_TX.2.Instance=DMA2_Stream6
+Dma.USART6_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.USART6_TX.2.Mode=DMA_NORMAL
+Dma.USART6_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_TX.2.Priority=DMA_PRIORITY_LOW
+Dma.USART6_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Mode=I2C_Fast
@@ -107,6 +118,7 @@ MxCube.Version=6.3.0
 MxDb.Version=DB.6.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA2_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA2_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -229,7 +241,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_TIM3_Init-TIM3-false-LL-true,5-MX_USART6_UART_Init-USART6-false-LL-true,6-MX_SPI2_Init-SPI2-false-LL-true,7-MX_SPI1_Init-SPI1-false-LL-true,8-MX_UART5_Init-UART5-false-LL-true,9-MX_TIM5_Init-TIM5-false-LL-true,10-MX_TIM7_Init-TIM7-false-LL-true,11-MX_USART1_UART_Init-USART1-false-HAL-true,12-MX_SPI3_Init-SPI3-false-LL-true,13-MX_I2C1_Init-I2C1-false-HAL-true,14-MX_UART4_Init-UART4-false-LL-true,15-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_TIM3_Init-TIM3-false-LL-true,5-MX_USART6_UART_Init-USART6-false-HAL-true,6-MX_SPI2_Init-SPI2-false-LL-true,7-MX_SPI1_Init-SPI1-false-LL-true,8-MX_UART5_Init-UART5-false-LL-true,9-MX_TIM5_Init-TIM5-false-LL-true,10-MX_TIM7_Init-TIM7-false-LL-true,11-MX_USART1_UART_Init-USART1-false-HAL-true,12-MX_SPI3_Init-SPI3-false-LL-true,13-MX_I2C1_Init-I2C1-false-HAL-true,14-MX_UART4_Init-UART4-false-LL-true,15-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
